tests/NormalTests/paczka1/fuzzy1/53253972.err
Error in line 4: PBnF S189 55,48
Error in line 8: uPw1 A756 -2,1
Error in line 1: uPw1 A756 38,1
Error in line 25: A764 S189 74,8
Error in line 19: M3QGG S166 61,6
